# adapters

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml  help_wanted.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
benchmark/: validation_bench.rs
crates/adapters-macros/: Cargo.toml  README.md
crates/adapters-macros/src/: lib.rs
docs/: book.toml
docs/src/: README.md  SUMMARY.md  api.md  examples.md  getting-started.md  schema-validation.md  serialization.md  transformation.md
docs/src/examples/: advanced_validators.md  basic_schema.md  explicit_schema.md  json_parsing.md  nested_models.md  optional_defaults.md  strict_mode.md  transformation.md
docs/theme/: head.hbs
examples/: advanced_validators.rs  basic_schema.rs  explicit_schema.rs  json_parsing.rs  nested_models.rs  optional_defaults.rs  strict_mode.rs  transformation.rs
src/: lib.rs
src/adapter/: mod.rs
src/deserializer/: mod.rs
src/error/: mod.rs
src/json/: lexer.rs  mod.rs  parser.rs
src/schema/: array.rs  boolean.rs  enums.rs  float.rs  integer.rs  mod.rs  null.rs  object.rs  string.rs
src/serializer/: mod.rs
src/transform/: mod.rs
src/validator/: common_validators.rs  mod.rs  number_validators.rs  string_validators.rs
src/value/: mod.rs
tests/: integration_tests.rs
